fixed the exceptions in the daos and added the methods to manage review redundancy and done some tests